Added link to Lofi playlist (simply to spotify) Added score tracking (hardcode the score, yet to figure out the code)

--- a/ToDoListHTML/index.html
+++ b/ToDoListHTML/index.html
@@ -35,6 +35,7 @@
                         <div class="img">
                             <div class="backdrop"></div>
                             <img src="icons/girl-leave.PNG" alt="">
+                            <h6> Score: <span class="score"></span>5</h6> 
                         </div>
                     </div>
                 </div>
@@ -70,6 +71,7 @@
                             </div>
                         </div>
                     </div>
+                    <a href="https://open.spotify.com/playlist/37i9dQZF1E4yhpveBnebcw?si=2eaaea4f6b4c4665"> Check out our Lofi Playlist</a>
                 </div>
             </div>
 
