added garden.html which is another page to water the plant

--- a/ToDoListHTML/index.html
+++ b/ToDoListHTML/index.html
@@ -27,6 +27,7 @@
                             />        
                         </svg>
                     </div>
+                    <a href="garden.html">Go to my Garden!</a>
                     <div class="welcome">
                         <div class="content">
                             <h1>Hello Wenjie</h1>
