--- a/ToDoListHTML/index.html
+++ b/ToDoListHTML/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset=""UTF-8">
+        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
         <title>Todo List Application</title>
     </head>
     <body>
-        <div class="wrapper show-category">
+        <div class="wrapper show-category">         <!--the phone screen-->
             <div class="screen-backdrop"></div>
             <div class="screen home-screen">
                 <div class="head-wrapper">
@@ -27,7 +27,7 @@
                             />        
                         </svg>
                     </div>
-                    <a href="garden.html">Go to my Garden!</a>
+                    <a href="garden.html">Visit My Garden!</a>
                     <div class="welcome">
                         <div class="content">
                             <h1>Hello Wenjie</h1>
@@ -72,7 +72,13 @@
                             </div>
                         </div>
                     </div>
-                    <a href="https://open.spotify.com/playlist/37i9dQZF1E4yhpveBnebcw?si=2eaaea4f6b4c4665"> Check out our Lofi Playlist</a>
+                    <div class="categories">
+                        <div class="category">
+                            <div class="left">
+                                <a href="https://open.spotify.com/playlist/37i9dQZF1E4yhpveBnebcw?si=2eaaea4f6b4c4665"> Check out our Lofi Playlist</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
 
