--- a/ToDoListHTML/garden.html
+++ b/ToDoListHTML/garden.html
@@ -11,7 +11,7 @@
         <div class="screen-backdrop"></div>
         <div class="content">
             <h1 class="center">Wenjie's Garden</h1>
-            <img src="sample_seed.png" alt="seed">
+            <img src="sample_seed.png" alt="seed"> <!--not sure why this not working:(-->
             <h3 class="center">Water your plant today!</h3>
         </div>
     </div>
