--- a/ToDoListHTML/login.html
+++ b/ToDoListHTML/login.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="register.css" rel="stylesheet">
     <title>Login HTML CSS</title>
-
 </head>
 
 <body>
@@ -14,26 +13,22 @@
         <div class="shape"></div>
         <div class="shape"></div>
     </div>
-    <form action="#">
-        <h3>Register</h3>
+    <form id="loginForm">
+        <h3>Log In</h3>
 
-        <input type="text" id="username" name="username" placeholder="username" />
-        <input type="text" id="email" name="email" placeholder="email" />
-        <input type="text" id="password" name="password" placeholder="password" />
-        
+        <input type="email" id="email" name="email" placeholder="email" required />
+        <input type="password" id="password" name="password" placeholder="password" required />
 
-        <input type="submit" id="signUp" name="signup_submit" value="Sign up" />
+        <input type="submit" id="logIn" name="logIn_submit" value="Log In" />
 
+        <a href="register.html">Don't have an account? Register now!</a>
     </form>
 
     <script type="module">
         // Import the functions you need from the SDKs you need
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
-        import { getDatabase } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js";
-        import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
-
-        // TODO: Add SDKs for Firebase products that you want to use
-        // https://firebase.google.com/docs/web/setup#available-libraries
+        import { getDatabase, ref, update } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js";
+        import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
 
         // Your web app's Firebase configuration
         const firebaseConfig = {
@@ -51,30 +46,31 @@
         const database = getDatabase(app);
         const auth = getAuth();
 
-        signUp.addEventListener('click', (e) => {
+        document.getElementById('loginForm').addEventListener('submit', (e) => {
+            e.preventDefault();
 
-            var email = document.getElementById('email').value;
-            var password = document.getElementById('password').value;
-            var username = document.getElementById('username').value;
+            const email = document.getElementById('email').value;
+            const password = document.getElementById('password').value;
 
-            createUserWithEmailAndPassword(auth, email, password)
+            signInWithEmailAndPassword(auth, email, password)
                 .then((userCredential) => {
-                    // Signed up 
+                    // Signed in 
                     const user = userCredential.user;
-                    alert('user created!');
-                    // ...
+                    const dt = new Date();
+
+                    update(ref(database, 'users/' + user.uid), {
+                        last_login: dt,
+                    });
+
+                    window.location.assign('main.html')
+                    alert('User logged in!');
+
                 })
                 .catch((error) => {
-                    const errorCode = error.code;
                     const errorMessage = error.message;
-
                     alert(errorMessage);
-                    // ..
-
                 });
-
         });
-
     </script>
 </body>
 
