--- a/ToDoListHTML/main.html
+++ b/ToDoListHTML/main.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="main.css">
         <title>Todo List Application</title>
     </head>
     <body>
@@ -208,6 +208,6 @@
             </div>
         </div>
 
-        <script src="script.js"></script>
+        <script src="main.js"></script>
     </body>
     </html>
