improvements to UX

--- a/ToDoListHTML/register.html
+++ b/ToDoListHTML/register.html
@@ -64,6 +64,7 @@
                         email: email
                     });
 
+                    window.location.assign('login.html');
                     alert('User created!');
                 })
                 .catch((error) => {
