--- a/ToDoListHTML/garden.html
+++ b/ToDoListHTML/garden.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="main.css">
         <title>My Garden</title>
 </head>
 <body>
@@ -19,6 +19,6 @@
         <div class="black-backdrop"></div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
