Set up "water droplet" currency, every completed task will add 1 to the currency
Have yet to save locally (like if refresh page, the count will go to 0 again)

--- a/ToDoListHTML/main.html
+++ b/ToDoListHTML/main.html
@@ -31,12 +31,12 @@
                     <div class="welcome">
                         <div class="content">
                             <h1>Hello Wenjie</h1>
-                            <p>Today you have <span class="totalTasks">5</span> tasks</p>
+                            <p>Today you have <span class="totalTasks">0</span> tasks</p>
                         </div>
                         <div class="img">
                             <div class="backdrop"></div>
                             <img src="icons/girl-leave.PNG" alt="">
-                            <h6> Score: <span class="score"></span>5</h6> 
+                            <h6> Water Droplets💧: <span class="score"></span></h6> 
                         </div>
                     </div>
                 </div>
@@ -49,7 +49,7 @@
                                 <img src="icons/water-plant.PNG" alt="">
                                 <div class="content">
                                     <h1>High Priority</h1>
-                                    <p>5 Tasks</p>
+                                    <p>0 Tasks</p>
                                 </div>
                             </div>
                             <div class="options">
