--- a/ToDoListHTML/main.html
+++ b/ToDoListHTML/main.html
@@ -12,17 +12,30 @@
         <div class="screen home-screen">
             <div class="head-wrapper">
                 <div class="menu-btn">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.6M3.75 12h16.5m-16.5 5.25H12" />
+                    <svg
+                        xmlns="https://www.w3.org/2000/svg"
+                        fill="none"
+                        viewBox="0 0 24 24"
+                        stroke-width="1.5"
+                        stroke="currentColor"
+                        class="w-6 h-6"
+                    >
+                        <path
+                            stroke-linecap="round"
+                            stroke-linejoin="round"
+                            d="M3.75 6.75h16.6M3.75 12h16.5m-16.5 5.25H12"
+                        />        
                     </svg>
                 </div>
-                <div class="garden-button-wrapper">
-                    <a href="garden.html" class="garden-button">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M12 21v-4M3 21a9 9 0 0118 0M3 14s4-4.5 9-4.5S21 14 21 14M3 10s4-4.5 9-4.5S21 10 21 10M12 4.5a1.5 1.5 0 110 3 1.5 1.5 0 010-3z" />
-                        </svg>
-                        Garden
-                    </a>
+                <div class="menu">
+                    <nav class="side-menu">
+                        <ul>
+                            <li><a href="garden.html">Visit My Garden!</a></li>
+                        </ul>
+                        <ul>
+                            <li><a href="shop.html">Leafy's Shop</a></li>
+                        </ul>
+                    </nav>
                 </div>
                 <div class="welcome">
                     <div class="content">
@@ -146,5 +159,6 @@
             }
         }
     </script>
+    
 </body>
 </html>
